test: 불필요한 조건 제거, 잘못된 조건 수정